--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     margin-top: 0px;
     width: 200px;
     border-top-left-radius: 7px;
+    background:url("foto-header.jpg");
 }
 
 #cabecalho h1 {
